package Domain;
public enum RecyclingCategory {
    PLASTIC,
    METAL,
    GLASS,
    PAPER,
    ORGANIC,
    ELECTRONIC,
    HAZARDOUS,
    NON_RECYCLABLE,
    WOOD
}
