public interface ImpactCalculationStrategy {
    Double CalculateImpact(Product product);
}
