@startuml
package "Domain Layer"{


class Product {
  - name : String
  - category : String
  - lifespan : int
  - materials : List<Material>
  + Product(name : String, category : String, lifespan : int, materials : List<Material>)
  + getName() : String
  + getCategory() : String
  + getEstimatedLifespanYears() : int
  + getMaterials() : List<Material>
  + addMaterial(material : Material) : void
  + calculateImpact(strategy : ImpactCalculationStrategy) : double
  + getRecyclingGuidance(product : Product, guidance : RecyclingGuidance) : String
}

class Material {
  - name : String
  - impactValue : double
  - recyclingCategory : RecyclingCategory
  + Material(name : String, impactValue : double, category : RecyclingCategory)
  + getName() : String
  + getImpactValue() : double
  + getRecyclingCategory() : RecyclingCategory
}

enum RecyclingCategory {
  PLASTIC
  METAL
  GLASS
  PAPER
  ORGANIC
  ELECTRONIC
  HAZARDOUS
  NON_RECYCLABLE
  WOOD
}

class RecyclingGuidance {
  + generateGuidance(product : Product) : String
  - guidanceFor(category : RecyclingCategory) : String
}

Product "0" *-- "*" Material
Material --> RecyclingCategory
RecyclingGuidance ..> Product
RecyclingGuidance ..> RecyclingCategory



interface ImpactCalculationStrategy {
  + calculateImpact(materials : List<Material>) : double
}

class SimpleImpactStrategy {
  + calculateImpact(materials : List<Material>) : double
}

class WeightedImpactStrategy {
  - lifespan : int
  + WeightedImpactStrategy(lifespan : int)
  + calculateImpact(materials : List<Material>) : double
}

ImpactCalculationStrategy <|.. SimpleImpactStrategy
ImpactCalculationStrategy <|.. WeightedImpactStrategy
}
package "Application Layer"{

class ProductService {
  - products : List<Product>
  - materialservice : MaterialService
  - guidance : RecyclingGuidance
  + createProduct(name : String, category : String, lifespan : int, materialNames : List<String>) : Product
  + listProducts() : List<Product>
  + getProductDetails(name : String) : Product
  + findByProductName(name : String) : Product
  + calculateImpact(productName : String, strategy : ImpactCalculationStrategy) : double
  + getRecyclingGuidance(product : Product) : String
  - saveProductsToFile() : void
  - loadProductsFromFile() : void
}

class MaterialService {
  - materials : List<Material>
  + listMaterials() : List<Material>
  + findByMaterialName(name : String) : Material
  + createMaterial(name : String, impactValue : double, category : RecyclingCategory) : Material
  + saveMaterialsToFile() : void
  + loadMaterialsFromFile() : void
}

class StrategyService {
  + {static} create(choice : int, lifespanYears : int) : ImpactCalculationStrategy
}

ProductService ..> Product
ProductService --> MaterialService
StrategyService ..> ImpactCalculationStrategy

}


package "Presentation Layer"{


class ConsoleUI {
  - scanner : Scanner
  - productService : ProductService
  - materialService : MaterialService
  + start() : void
  + displayMainMenu() : void
  + controllCreateProduct() : void
  + controllCreateMaterials() : Material
  + controllListProducts() : void
  + controllListMaterials() : void
  + controllProductImpact() : void
  + controllRecyclingMenu() : void
  + recyclingCategoryMenu() : void
}

ConsoleUI -> ProductService
ConsoleUI -> MaterialService
ConsoleUI ..> StrategyService
}
@enduml
